  to fallback to normal decoding if bitstreaming isn't supported
! Ticket #3763, VMR-9 renderless and EVR-CP: The displayed subtitle was not updated when seeking while playback was paused
! Ticket #3775, "Play > Subtitles" menu could be mistakenly disabled when the internal subtitle renderer was unavailable
! Ticket #4011, Fix image saving for streams with characters not supported in path names
! Ticket #4013, Subtitle renderer: Fix a crash on malformed animated transforms (\t tags with no parameters)
! Ticket #4020, Update dialog: Fix incorrect version info when using Belarusian, Slovenian or Russian translations
! Ticket #4050, MPC-HC could crash when loading invalid DVB channel settings


1.7.3 - 02 February 2014
========================
+ New Galician and Vietnamese translations
+ Ticket #3873, Display tooltip with H/W decoder name on hover over status message
* Updated Armenian, Basque, British English, Simplified Chinese, French, German, Japanese, Malay,
  Polish, Portuguese (Brazil), Romanian, Slovak, Spanish, Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar
! Ticket #3881, DXVA status was invalid with certain decoders
! Ticket #3981, Subtitle renderer: the blur filter was sometimes wrong on some part of the subpicture
! Ticket #3988, DVD favorites: the position in the DVD was not restored. Additionally if "Remember DVD position"
  is enabled and a DVD favorite has a position, the position from the favorite will be used instead of the
  remembered position. Also fix loading of DVD favorites created with no position.
! Ticket #3998, The "Debug Shaders" dialog icon was missing when a translation was used


1.7.2 - 26 January 2014
=======================
+ Added support for XySubFilter, only compatible with embedded subtitles for now
+ New option to auto-hide docked panels together with toolbars