@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2012 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -21,6 +21,7 @@
 
 #include "stdafx.h"
 #include "FilterApp.h"
+#include "../DSUtil/WinAPIUtils.h"
 
 extern "C" BOOL WINAPI DllEntryPoint(HINSTANCE, ULONG, LPVOID);
 
@@ -33,6 +34,8 @@ BOOL CFilterApp::InitInstance()
     if (!__super::InitInstance()) {
         return FALSE;
     }
+
+    WorkAroundMathLibraryBug();
 
     SetRegistryKey(_T("Gabest"));
 
