@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -24,6 +24,7 @@
 #include "DirectVobSubPropPage.h"
 #include "VSFilter.h"
 #include "../../../DSUtil/MediaTypes.h"
+#include "../../../DSUtil/WinAPIUtils.h"
 
 #include <InitGuid.h>
 #include "moreuuids.h"
@@ -45,6 +46,8 @@ BOOL CVSFilterApp::InitInstance()
     if (!CWinApp::InitInstance()) {
         return FALSE;
     }
+
+    WorkAroundMathLibraryBug();
 
     SetRegistryKey(_T("MPC-HC"));
 
